# melon

./: .gitignore  .gitmodules  03dd08f1.48415a54.js  0acc7bd7.c7b6ec19.js  0e14e458.e5f3dd53.js  1.343061b0.js  17896441.45e4c31b.js  2.330af622.js  209736a1.43e78797.js  23d28cd9.17cf9d2d.js  2795f156.7fa9455a.js  31db6dd5.5cfe4b2a.js  357cdedc.fcefb3cf.js  3d799ada.30d93971.js  404.html  43.f3832d12.js  44.4b500b20.js  454c6e39.e4e34a46.js  48105a6b.74677b12.js  570fdc56.7c59589d.js  5a5362a4.20d9a7dd.js  63e18d4e.795ea1b6.js  7037e66f.dd6dcb39.js  8522799e.c4af59f2.js  8c8b0265.20f54a94.js  8d3f54cb.317ee441.js  8ebddfc4.7777df61.js  927d9381.68e8b7c5.js  935f2afb.fe183059.js  995dccee.be86f7c4.js  CMakeLists.txt  LICENSE.md  README.md  b12275c7.0dc515be.js  b6ea63ec.c9a932aa.js  ba85d9c4.efc5f755.js  c377a04b.107f466c.js  c47e8457.712ce384.js  c4c76b4f.7992e73f.js  c4f5d8e4.2cb16b1e.js  (+14 more)
.github/workflows/: docs.yml  emscripten.yml  linux.yml  macos.yml  melon-ci.yml  windows.yml
benchmarks/: benchmark.p.template  run.sh  utils.sh
benchmarks/lua/: array_get.lua  array_push.lua  assignments.lua  assignments_iterators.lua  custom_operator.lua  inheritance.lua  invokation.lua  nbody.lua  number_sum.lua  objects_get.lua  objects_lookup.lua  objects_strings.lua  results_b9c304e.csv  run.sh  strings_manipulation.lua
benchmarks/melon/: array_get.ms  array_push.ms  assignments.ms  assignments_iterators.ms  custom_operator.ms  inheritance.ms  invokation.ms  nbody.ms  number_sum.ms  objects_get.ms  objects_lookup.ms  objects_strings.ms  results_b9c304e.csv  run.sh  strings_manipulation.ms
benchmarks/node/: assignments.js  objects_get.js  results_b9c304e.csv  run.sh
benchmarks/php/: array_get.php  array_push.php  assignments.php  assignments_iterators.php  invokations.php  number_sum.php  objects_get.php  objects_lookup.php  objects_strings.php  results_b9c304e.csv  run.sh
benchmarks/python/: array_get.py  array_push.py  assignments.py  assignments_iterators.py  custom_operator.py  inheritance.py  invokation.py  nbody.py  number_sum.py  objects_get.py  objects_lookup.py  objects_strings.py  results_b9c304e.csv  run.sh  strings_manipulation.py
benchmarks/ruby/: array_get.rb  array_push.rb  assignments.rb  assignments_iterators.rb  custom_operator.rb  inheritance.rb  invokation.rb  nbody.rb  number_sum.rb  objects_get.rb  objects_lookup.rb  objects_strings.rb  results_b9c304e.csv  run.sh  strings_manipulation.rb
docs/: docusaurus.config.js  index.html  modules.json  package-lock.json  sidebars.js
docs/control-structures/: index.html
docs/docs/: array.md  array_module.md  bool.md  cli_module.md  compiler_module.md  control_structures.md  debug_module.md  fs_module.md  function.md  function_module.md  gc_module.md  import_module.md  index.md  integer.md  integer_module.md  io_module.md  iterator.md  json_module.md  math_module.md  modules.md  null.md  number.md  number_module.md  object.md  object_module.md  operators.md  path_module.md  random_module.md  range.md  string.md  string_module.md  symbol.md  system_module.md  types_module.md  variables.md
docs/modules/: index.html
docs/modules/array_module/: index.html
docs/modules/cli_module/: index.html
docs/modules/compiler_module/: index.html
docs/modules/debug_module/: index.html
docs/modules/fs_module/: index.html
docs/modules/function_module/: index.html
docs/modules/gc_module/: index.html
docs/modules/import_module/: index.html
docs/modules/integer_module/: index.html
docs/modules/io_module/: index.html
docs/modules/json_module/: index.html
docs/modules/math_module/: index.html
docs/modules/number_module/: index.html
docs/modules/object_module/: index.html
docs/modules/path_module/: index.html
docs/modules/random_module/: index.html
docs/modules/string_module/: index.html
docs/modules/system_module/: index.html
docs/modules/types_module/: index.html
docs/operators/: index.html
docs/src/css/: custom.css
docs/src/pages/: index.js
docs/types/array/: index.html
docs/types/bool/: index.html
docs/types/function/: index.html
docs/types/integer/: index.html
docs/types/iterator/: index.html
docs/types/null/: index.html
docs/types/number/: index.html
docs/types/object/: index.html
docs/types/range/: index.html
docs/types/string/: index.html
docs/types/symbol/: index.html
docs/variables/: index.html
src/melon/: melon.h
src/melon/core/: array.c  array.h  buffer.c  buffer.h  build_config.h.in  closure.c  closure.h  compiler.c  compiler.h  config.h  deserializer.c  deserializer.h  function.c  function.h  gc.c  gc.h  gc_item.c  gc_item.h  lexer.c  lexer.h  lists.h  macros.h  memory_utils.c  memory_utils.h  native_iterator.c  native_iterator.h  object.c  object.h  opcodes.c  opcodes.h  program.c  program.h  range.c  range.h  serializer.c  serializer.h  stack.h  stack_meta.c  stack_meta.h  strings_table.h  (+13 more)
src/melon/libs/csiphash/: README.md
src/melon/libs/splitmix64/: splitmix64.c  splitmix64.h
src/melon/libs/xoshiro256ss/: xoshiro256starstar.c  xoshiro256starstar.h
src/melon/modules/: modules.c  modules.h  system_modules.h
src/melon/modules/array/: array_module.c  array_module.h
src/melon/modules/cli/: cli_module.c  cli_module.h
src/melon/modules/compiler/: compiler_module.c  compiler_module.h
src/melon/modules/debug/: debug_module.c  debug_module.h
src/melon/modules/fs/: fs_module.c  fs_module.h  fs_os_api.h
src/melon/modules/function/: function_module.c  function_module.h
src/melon/modules/gc/: gc_module.c  gc_module.h
src/melon/modules/import/: import_module.c  import_module.h
src/melon/modules/integer/: integer_module.c  integer_module.h
src/melon/tools/: assembler.cpp  disassembler.cpp  melon.cpp  utils.cpp  utils.h
tests/: compile.sh  main.cpp
tests/docker/linux/: Dockerfile  melon_test.sh  run_linux.sh
tools/module-docs/: index.js  package-lock.json  package.json  template.md
tools/vscode/melonscript-assembly/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
(+214 files in other folders)
